--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   provider: ^4.3.2+2
   fluttertoast: ^7.1.1
   firebase_core: ^0.5.2
+  curved_navigation_bar: ^0.3.4
 
 dev_dependencies:
   flutter_test:
